Updates markup to use simplified line-container.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5386,7 +5386,7 @@ img {
           -----------------------
           .line-container
             .line-container_body
-    - name: Line container with a 'pullup' (example 1)
+    - name: Line container with no top border or padding (example 1)
       markup: |
         <div class="line-container line-container__no-top">
             <div class="line-container_body">
@@ -5407,15 +5407,9 @@ img {
         - |
           Structural cheat sheet:
           -----------------------
-          .line-container
+          .line-container.line-container__no-top
             .line-container_body
-              .line-container_pullup
-      notes:
-        - "The 'pullup' allows you to pull an element up flush against the top
-          of a .line-container."
-        - ".line-container_pullup works well with a .header-slug but it can be
-          used with other patterns too, like the image example below."
-    - name: Line container with a 'pullup' (example 2)
+    - name: Line container with no top border or padding (example 2)
       markup: |
         <div class="line-container">
             <div class="line-container_body line-container__no-top">
@@ -5676,8 +5670,8 @@ img {
                     corporis nemo culpa dolorum! Laborum at eos deleniti
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
-                <aside class="post_inset post_inset__right line-container">
-                    <h2 class="line-container_pullup header-slug">
+                <aside class="post_inset post_inset__right line-container line-container__no-top">
+                    <h2 class="header-slug">
                         <span class="header-slug_inner">
                             More information
                         </span>
