--- a/static/css/post.less
+++ b/static/css/post.less
@@ -215,8 +215,8 @@
                     corporis nemo culpa dolorum! Laborum at eos deleniti
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
-                <aside class="post_inset post_inset__right line-container">
-                    <h2 class="line-container_pullup header-slug">
+                <aside class="post_inset post_inset__right line-container line-container__no-top">
+                    <h2 class="header-slug">
                         <span class="header-slug_inner">
                             More information
                         </span>
