--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -9,8 +9,9 @@
     });
 }
 
-.content_outer-wrapper {
-    border-top: 10px solid @green;
+.content_bar {
+    height: 10px;
+    background: @green;
 }
 
 .content_main,
