--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3136,7 +3136,6 @@ textarea {
   font-weight: normal !important;
 }
 
-.pagination_current-page,
 input[type="number"].pagination_current-page {
   display: inline-block;
   vertical-align: middle;
@@ -3153,7 +3152,6 @@ input[type="number"].pagination_current-page {
   text-align: right;
 }
 
-.pagination_current-page,
 .lt-ie9 input[type="number"].pagination_current-page {
   font-weight: normal !important;
 }
@@ -4335,8 +4333,9 @@ img {
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.content_outer-wrapper {
-  border-top: 10px solid #2cb34a;
+.content_bar {
+  height: 10px;
+  background: #2cb34a;
 }
 
 .content_main,
