--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -5,6 +5,33 @@
 
 
 /* topdoc
+  name: Forms
+  family: cfgov-misc
+  patterns:
+    - name: Labels
+      markup: |
+        <label>Topics</label>
+        <input type="text">
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          ...
+  tags:
+    - cfgov-misc
+*/
+
+.form-label {
+    .h5();
+}
+
+.form-label__inline {
+    .webfont-regular();
+    text-transform: none;
+}
+
+
+/* topdoc
   name: Hero
   family: cfgov-misc
   patterns:
