--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -386,6 +386,65 @@
 }
 
 
+/* topdoc
+  name: Padded container
+  family: cfgov-misc
+  notes:
+    - ".padded-container is meant to contain anything you want with consistent
+      padding. It uses a margin collapsing trick in CSS to achieve this
+      consistency which this is why .line-container_body is needed. The only
+      caveat to this consistency is if you place something inside of it that has
+      a bottom-margin that is larger than the .padded-container padding."
+  patterns:
+    - name: Basic padded container
+      markup: |
+        <div class="padded-container">
+            <div class="padded-container_body">
+                <p>
+                    ¯\_(ツ)_/¯<br>
+                    There is padding all around me!
+                </p>
+            </div>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .padded-container
+            .padded-container_body
+  tags:
+    - cfgov-misc
+*/
+
+.padded-container {
+    margin: 0 0 unit(30px / @base-font-size-px, em);
+    background: @gray-10;
+    // Counteract the margin collapsing.
+    overflow: hidden;
+
+    &_body {
+        // 26px is eyeballed to 30px when considering line heights of potential
+        // children.
+        margin: unit(24px / @base-font-size-px, em)
+                unit(30px / @base-font-size-px, em)
+                unit(24px / @base-font-size-px, em);
+    }
+}
+
+
+/* topdoc
+  name: Filters
+  family: cfgov-misc
+  patterns:
+    - name: Basic filter
+  tags:
+    - cfgov-misc
+*/
+
+.filters {
+    margin-bottom: unit(30px / @base-font-size-px, em);
+}
+
 
 /* topdoc
   name: EOF
