--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -38,6 +38,60 @@
 
 
 /* topdoc
+  name: Hero
+  family: cfgov-blog-docs
+  patterns:
+    - name: Blog hero
+      markup: |
+        <section class="hero" style="background-color:#337E7D;">
+            <div class="wrapper">
+                <div class="hero_card">
+                    <div class="hero_card-bg">
+                        <div class="hero_card-padding">
+                            <a href="#" class="category-slug">
+                                <span class="cf-icon cf-icon-help"></span>
+                                <span class="visually-hidden">Category:</span>
+                                Category
+                            </a>
+                            <a class="summary" href="#">
+                                <h1 class="summary_header">Header</h1>
+                                <p class="summary_text">Text.</p>
+                                <p class="summary_byline">Byline</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__small u-flexible-container">
+                <div class="hero_img u-flexible-container_inner"
+                     style="background-image:url(../static/img/hero-small.png);">
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__large">
+                <div class="hero_img"
+                     style="background-image:url(../static/img/hero-large.png);">
+                </div>
+            </div>
+        </section>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .hero
+            .wrapper
+              .hero_card
+                .hero_card-bg
+                  .hero_card-padding
+                    .category-slug (collapsed for brevity)
+                    .summary (collapsed for brevity)
+            .hero_img-container.hero_img-container__small
+              .hero_img
+            .hero_img-container.hero_img-container__large
+              .hero_img
+*/
+
+
+/* topdoc
   name: Post previews
   family: cfgov-blog-docs
   patterns:
