--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5263,12 +5263,70 @@ img {
   patterns:
     - name: Basic hero
       markup: |
-        ...
+        <section class="hero" style="background-color:#337E7D;">
+            <div class="wrapper">
+                <div class="hero_card">
+                    <div class="hero_card-bg">
+                        <div class="hero_card-padding">
+                            <h1>My hero!</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__small u-flexible-container">
+                <div class="hero_img u-flexible-container_inner"
+                     style="background-image:url(../static/img/hero-small.png);">
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__large">
+                <div class="hero_img"
+                     style="background-image:url(../static/img/hero-large.png);">
+                </div>
+            </div>
+        </section>
       codenotes:
         - |
           Structural cheat sheet:
           -----------------------
-          ...
+          .hero
+            .wrapper
+              .hero_card
+                .hero_card-bg
+                  .hero_card-padding
+            .hero_img-container.hero_img-container__small
+              .hero_img
+            .hero_img-container.hero_img-container__large
+              .hero_img
+    - codenotes:
+        - .hero
+      notes:
+        - "For full screen edge to edge background color. We have chosen to set
+          the background color using an inline style so that our templating
+          system can dynamically set it. If it makes more sense for your project
+          to set it with CSS then please do so."
+    - codenotes:
+        - .wrapper
+      notes:
+        - "To center the hero content with a max-width."
+    - codenotes:
+        - .hero_card-padding
+      notes:
+        - "This extra div is used to collapse the margins of child elements."
+    - codenotes:
+        - .hero_img-container
+      notes:
+        - "By using a wrapping element we can responsibly load a small or large
+          screen background image by controling the display value of this element.
+          More info on this approach can be found here:
+          http://timkadlec.com/2012/04/media-query-asset-downloading-results/"
+    - codenotes:
+        - .hero_img
+      notes:
+        - "The reason for using a background image is noted above in
+          .hero_img-container. We have chosen to set the background image using
+          an inline style so that our templating system can dynamically set the
+          source. If it makes more sense for your project to set it with CSS
+          then please do so."
   tags:
     - cfgov-misc
 */
@@ -5282,6 +5340,20 @@ img {
 .hero_img-container {
   display: none;
   line-height: 1;
+}
+
+.hero_img-container__small {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.hero_img-container__small .hero_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .hero_img {
@@ -6409,6 +6481,59 @@ a.focus .summary_header {
         - "Official icons are still being developed, hence the ?."
   tags:
     - cfgov-blog-docs
+*/
+
+/* topdoc
+  name: Hero
+  family: cfgov-blog-docs
+  patterns:
+    - name: Blog hero
+      markup: |
+        <section class="hero" style="background-color:#337E7D;">
+            <div class="wrapper">
+                <div class="hero_card">
+                    <div class="hero_card-bg">
+                        <div class="hero_card-padding">
+                            <a href="#" class="category-slug">
+                                <span class="cf-icon cf-icon-help"></span>
+                                <span class="visually-hidden">Category:</span>
+                                Category
+                            </a>
+                            <a class="summary" href="#">
+                                <h1 class="summary_header">Header</h1>
+                                <p class="summary_text">Text.</p>
+                                <p class="summary_byline">Byline</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__small u-flexible-container">
+                <div class="hero_img u-flexible-container_inner"
+                     style="background-image:url(../static/img/hero-small.png);">
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__large">
+                <div class="hero_img"
+                     style="background-image:url(../static/img/hero-large.png);">
+                </div>
+            </div>
+        </section>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .hero
+            .wrapper
+              .hero_card
+                .hero_card-bg
+                  .hero_card-padding
+                    .category-slug (collapsed for brevity)
+                    .summary (collapsed for brevity)
+            .hero_img-container.hero_img-container__small
+              .hero_img
+            .hero_img-container.hero_img-container__large
+              .hero_img
 */
 
 /* topdoc
