--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -117,7 +117,7 @@
         line-height: 1;
     }
 
-    // The small her image container should scale proportionally to the image
+    // The small hero image container should scale proportionally to the image
     // which is set as a background in the child .hero_img.
     &_img-container__small {
         .u-flexible-container();
