Some basic form stuff.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -92,6 +92,24 @@
 
 
 /* topdoc
+  name: Post preview filters
+  family: cfgov-blog-docs
+  patterns:
+    - name: Blog filters
+      markup: |
+        ...
+      notes:
+        - "..."
+  tags:
+    - cfgov-blog-docs
+*/
+
+.post-preview-filters {
+    margin-bottom: unit(30px / @base-font-size-px, em);
+}
+
+
+/* topdoc
   name: Post previews
   family: cfgov-blog-docs
   patterns:
