Testing ie fix.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5486,6 +5486,10 @@ img {
   z-index: 1;
 }
 
+.lt-ie8 .hero_img-container__large {
+  position: relative;
+}
+
 .hero_card {
   position: relative;
   display: inline-block;
