--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4924,6 +4924,9 @@ img {
     top: 0;
     z-index: 1;
   }
+  .lt-ie8 .hero_img-container__large {
+    position: relative;
+  }
   .hero_card {
     position: relative;
     display: inline-block;
