--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -260,6 +260,10 @@
             position: absolute;
             top: 0;
             z-index: 1;
+
+            .lt-ie8 & {
+                position: relative;
+            }
         }
 
         &_card {
