Testing ie fix.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -260,22 +260,18 @@
             position: absolute;
             top: 0;
             z-index: 1;
-
-            .lt-ie8 & {
-                position: relative;
-            }
         }
 
         &_card {
             position: relative;
-            // .column(6, @total-columns, 6);
+            .column(6, @total-columns, 6);
             z-index: 2;
         }
     });
 
     .u-respond-to-min(1024px, {
         &_card {
-            // .column(4, @total-columns, 8);
+            .column(4, @total-columns, 8);
         }
     });
 }
