--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -264,14 +264,14 @@
 
         &_card {
             position: relative;
-            .column(6, @total-columns, 6);
+            // .column(6, @total-columns, 6);
             z-index: 2;
         }
     });
 
     .u-respond-to-min(1024px, {
         &_card {
-            .column(4, @total-columns, 8);
+            // .column(4, @total-columns, 8);
         }
     });
 }
