--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -263,7 +263,7 @@
         }
 
         &_card {
-            // position: relative;
+            position: relative;
             .column(6, @total-columns, 6);
             // z-index: 2;
         }
