--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5487,6 +5487,7 @@ img {
 }
 
 .hero_card {
+  position: relative;
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
