Testing ie fix.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3631,7 +3631,7 @@ blockquote {
 .lt-ie8 .demo-col-12 {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 .demo-col-6 {
   display: inline-block;
@@ -3650,7 +3650,7 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 @media only all and (min-width: 30em) {
   .demo-col-6 {
@@ -3670,7 +3670,7 @@ blockquote {
   .lt-ie8 .demo-col-6 {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 /* Base styles
@@ -3930,7 +3930,7 @@ img {
   }
   .lt-ie8 .wrapper {
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .content_bar {
@@ -3962,7 +3962,7 @@ img {
   .lt-ie8 .content_sidebar {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .header .demo-placeholder,
@@ -3997,7 +3997,7 @@ img {
   .lt-ie8 .content__1-3 .content_main {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__1-3 .content_sidebar {
     display: inline-block;
@@ -4018,7 +4018,7 @@ img {
   .lt-ie8 .content__1-3 .content_sidebar {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__2-1 .content_main {
     display: inline-block;
@@ -4037,7 +4037,7 @@ img {
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__2-1 .content_sidebar {
     display: inline-block;
@@ -4056,7 +4056,7 @@ img {
   .lt-ie8 .content__2-1 .content_sidebar {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content_main,
   .content_sidebar {
@@ -4082,7 +4082,7 @@ img {
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .lt-ie8 .content__2-1 .content_main {
     padding-right: 0;
@@ -4936,6 +4936,7 @@ img {
     vertical-align: top;
     width: 100%;
     padding-left: 50%;
+    z-index: 2;
   }
   .ie .hero_card {
     margin-right: -0.26em;
@@ -4943,7 +4944,7 @@ img {
   .lt-ie8 .hero_card {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .lt-ie8 .hero_card {
     padding-left: 0;
@@ -4968,7 +4969,7 @@ img {
   .lt-ie8 .hero_card {
     display: inline;
     *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .lt-ie8 .hero_card {
     padding-left: 0;
