--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4141,7 +4141,7 @@ blockquote {
 .lt-ie8 .demo-col-12 {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4163,7 +4163,7 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4185,7 +4185,7 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* Base styles
@@ -4459,7 +4459,7 @@ img {
 
 .lt-ie8 .wrapper {
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_bar {
@@ -4494,7 +4494,7 @@ img {
 .lt-ie8 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .header .demo-placeholder,
@@ -4524,7 +4524,7 @@ img {
 .lt-ie8 .content__1-3 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_sidebar {
@@ -4548,7 +4548,7 @@ img {
 .lt-ie8 .content__1-3 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_main {
@@ -4570,7 +4570,7 @@ img {
 .lt-ie8 .content__2-1 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_sidebar {
@@ -4592,7 +4592,7 @@ img {
 .lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_main,
@@ -5498,6 +5498,7 @@ img {
   vertical-align: top;
   width: 100%;
   padding-left: 50%;
+  z-index: 2;
 }
 
 .ie .hero_card {
@@ -5507,7 +5508,7 @@ img {
 .lt-ie8 .hero_card {
   display: inline;
   *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .lt-ie8 .hero_card {
