--- a/static/css/main.less
+++ b/static/css/main.less
@@ -11,7 +11,7 @@
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
 @cf-icons-path: "../fonts/";
-@box-sizing-polyfill-path: "/cfgov-refresh/static/vendor/box-sizing-polyfill";
+@box-sizing-polyfill-path: "http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill";
 
 
 /* Demo-specific styles
