--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -263,9 +263,14 @@
         }
 
         &_card {
+            // Position relative messes up IE 8 and 7
             position: relative;
             .column(6, @total-columns, 6);
-            // z-index: 2;
+            z-index: 2;
+
+            // .lt-ie8 & {
+            //     position: 
+            // }
         }
     });
 
